--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 
 <body>
-    <h1>
-        <a href="index.html">link</a>
-        title
-    </h1>
+    <header>
+        <h1>
+            <a href="index.html">link</a>
+            title
+        </h1>
+    </header>
+
+
 
 </body>
 
