--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
 <body>
     <header>
-        <h1>
-            <a href="index.html">link</a>
-            title
-        </h1>
+        <nav>
+            <ul>
+                <li>home</li>
+                <li>news</li>
+                <li>blog</li>
+                <li>contact</li>
+            </ul>
+        </nav>
     </header>
 
 
