--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li>home</li>
+                <li>
+                    <a href="index.html">home</a>
+                </li>
                 <li>news</li>
                 <li>blog</li>
                 <li>contact</li>
