--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </ul>
         </nav>
     </header>
-
+<footer>
+    this is soooo serious footer page ever!!!
+</footer>
 
 
 </body>
