created new section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </ul>
         </nav>
     </header>
-
+    <section>
+        <div></div>
+        <div></div>
+    </section>
 
 
 </body>
