--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </header>
     <section>
         <div></div>
-        <div></div>
+        <div>
+            <img src="" alt="">
+        </div>
     </section>
 
 
