--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
         </nav>
     </header>
+    <p>text</p>
 <footer>
     this is soooo serious footer page ever!!!
 </footer>
