--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            this is main section!!!
+        </section>
+    </main>
 <footer>
     this is soooo serious footer page ever!!!
 </footer>
