--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
         <div></div>
         <div>
-            <img src="h" alt="">
+            <img src="sfnsfn" alt="">
         </div>
     </section>
 
