added section and img

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
     <section>
         <div></div>
         <div>
-            <img src="sfnsfn" alt="">
+                <img src="" alt="">
+            <img src="" alt="">
         </div>
     </section>
-
+    <main>
+        <div>
+            
+        </div>
+    </main>
 
 </body>
 
